added user story

--- a/client/src/public/test.html
+++ b/client/src/public/test.html
@@ -4,7 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/goldSnowPresent.css"> <!-- Your CSS file with themes -->
+  <link rel="stylesheet" href="./css/goldSnowTheme.css"> <!-- Your CSS file with themes -->
+  <link rel="stylesheet" href="./css/largeFlakeTheme.css"> <!-- Your CSS file with themes -->
+  <link rel="stylesheet" href="./css/snowmenTheme.css"> <!-- Your CSS file with themes -->
+  <link rel="stylesheet" href="./css/snowyTreeTheme.css"> <!-- Your CSS file with themes -->
   <link rel="stylesheet" href="./css/home.css"> <!-- Your CSS file with themes -->
+
   <title>Giftly - Winter Wonderland</title>
   <link rel="manifest" href="./manifest.json">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
