--- a/client/src/public/test.html
+++ b/client/src/public/test.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/home.css"> <!-- Your CSS file with themes -->
+  <link rel="stylesheet" href="css/home.css">
+   <!-- Your CSS file with themes -->
   <title>Giftly - Winter Wonderland</title>
   <link rel="manifest" href="./manifest.json">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
@@ -38,26 +39,38 @@
   <div class="shopping-box">
     <section class="shopping-grid">
       <div class="item-card">
-        <img src="https://via.placeholder.com/150" alt="Gift Item 1" class="item-image">
+        <img src="images/cozy-sweater.jpeg" alt="Gift Item 1" class="item-image">
         <h3 class="item-title">Cozy Sweater</h3>
         <p class="item-price">$49.99</p>
         <button class="add-to-cart-btn">Add to Cart</button>
       </div>
       <div class="item-card">
-        <img src="https://via.placeholder.com/150" alt="Gift Item 2" class="item-image">
+        <img src="images/winter-mug.jpeg" alt="Gift Item 2" class="item-image">
         <h3 class="item-title">Winter Mug</h3>
         <p class="item-price">$19.99</p>
         <button class="add-to-cart-btn">Add to Cart</button>
       </div>
       <div class="item-card">
-        <img src="https://via.placeholder.com/150" alt="Gift Item 3" class="item-image">
+        <img src="images/winter-boots.jpeg" alt="Gift Item 3" class="item-image">
         <h3 class="item-title">Snow Boots</h3>
         <p class="item-price">$59.99</p>
         <button class="add-to-cart-btn">Add to Cart</button>
       </div>
       <div class="item-card">
-        <img src="https://via.placeholder.com/150" alt="Gift Item 4" class="item-image">
+        <img src="images/winter-hat.jpeg" alt="Gift Item 4" class="item-image">
         <h3 class="item-title">Winter Hat</h3>
+        <p class="item-price">$24.99</p>
+        <button class="add-to-cart-btn">Add to Cart</button>
+      </div>
+      <div class="item-card">
+        <img src="images/snowglobe.jpeg" alt="Gift Item 4" class="item-image">
+        <h3 class="item-title">Snowglobe</h3>
+        <p class="item-price">$12.99</p>
+        <button class="add-to-cart-btn">Add to Cart</button>
+      </div>
+      <div class="item-card">
+        <img src="images/winter-gloves.jpeg" alt="Gift Item 4" class="item-image">
+        <h3 class="item-title">Winter Gloves</h3>
         <p class="item-price">$24.99</p>
         <button class="add-to-cart-btn">Add to Cart</button>
       </div>
@@ -75,6 +88,26 @@
   </footer>
 
   <!-- JavaScript to Randomly Select Theme -->
-  <script src="./themeRandomize.js"></script>
+
+  <script>
+    const themes = [
+      { cssFile: 'css/goldSnowTheme.css' },
+      { cssFile: 'css/goldSnowPresent.css' },
+      { cssFile: 'css/largeFlakeTheme.css' },
+      { cssFile: 'css/snowyTreeTheme.css' },
+      { cssFile: 'css/snowmenTheme.css' }
+    ];
+  
+    function applyRandomTheme() {
+      const randomTheme = themes[Math.floor(Math.random() * themes.length)];
+      const linkElement = document.createElement('link');
+      linkElement.rel = 'stylesheet';
+      linkElement.href = randomTheme.cssFile;
+      document.head.appendChild(linkElement);
+      console.log(`Applied theme: ${randomTheme.cssFile}`);
+    }
+  
+    window.onload = applyRandomTheme;
+</script>
 </body>
 </html>
